# model-context-protocol

./: .gitignore  ARCHITECTURE_COMPLETE.md  README.md  RESTRUCTURING_VERIFICATION.md  celebrate_success.py  check_mcp_tools.py  check_memory_tools.py  demo_tier2.py  demo_tier3.py  demo_tier4.py  full_mcp_server.py  list_tools.py  mcp_config.json  pyproject.toml  requirements.txt  setup_mcp_copilot.bat  simple_mcp_server.py  start_mcp_server.bat  start_mcp_server.sh  store_loop_memory.py  store_solution.py  test_mcp_connection.py  test_server.py  test_tools.py
config/: mcp-memory.env
docs/: COPILOT_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  MCP_TOOLS_REFERENCE.md  MEMORY_SYSTEM.md  README.md  RESTRUCTURING_COMPLETE.md  SETUP_TROUBLESHOOTING.md  TIER3_IMPLEMENTATION_COMPLETE.md
servers/: __init__.py
servers/ai-dev/: pyproject.toml  server.py
servers/ai-dev/tools/: __init__.py
servers/core/: __init__.py  pyproject.toml  server.py
servers/core-tools/: README.md  pyproject.toml  server.py
servers/core-tools/tools/: __init__.py  docker_analysis.py
servers/core/config/: core.env
servers/core/tools/: code_analysis.py  project_tree.py  service_discovery.py  simple_yaml.py
servers/memory/: README.md  README_merge.md  SETUP_GUIDE.md  __init__.py  pyproject.toml  requirements.txt  server.py  setup_enhanced_memory.py  simple_embedding_test.py  test_biting_lip.py  test_enhanced_memory.py  test_semantic_fixed.py  test_semantic_search.py
servers/memory/config/: mcp-memory.env.example  memory.env  memory.env.example
servers/memory/setup/: setup.py
servers/memory/tools/: README.md  __init__.py  memory_mcp_tool.py  memory_system.py  memory_system_legacy.py  test_comprehensive_mcp.py  test_mcp_tool.py  test_refactored_memory.py
servers/memory/tools/memory/: __init__.py  core.py  database.py  embeddings.py  enhanced.py  main.py
servers/worker/: README.md  __init__.py  pyproject.toml  server.py
servers/worker/config/: worker.env
servers/worker/tools/: ai_smart_refactorer.py  ai_test_generator.py
src/: __init__.py  ai_dev_server.py  config.py  core_tools_server.py  memory_server.py  server.py  test_memory_connection.py  test_servers.py
src/handlers/: __init__.py
src/tools/: __init__.py  ai_code_optimizer.py  ai_code_review_assistant.py  ai_documentation_writer.py  api_endpoint_discovery.py  code_analysis.py  config_analysis.py  database_schema_analysis.py  dependency_analysis.py  git_analysis.py  log_analysis.py  memory_mcp_tool.py  memory_system.py  memory_system_fixed.py  service_discovery.py  test_mapping.py  test_mapping.py.backup
