[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biting-lip-mcp-ai-dev"
version = "1.0.0"
description = "Biting Lip MCP AI Development Server - AI-Powered Development Tools"
authors = [
    {name = "Biting Lip AI", email = "info@bitinglip.ai"}
]
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
biting-lip-mcp-ai-dev = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
