[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biting-lip-mcp-tools"
version = "1.0.0"
description = "Biting Lip MCP Core Tools Server - Project Analysis and Infrastructure Tools"
authors = [
    {name = "Biting Lip AI", email = "info@bitinglip.ai"}
]
dependencies = [
    "python-dotenv>=1.0.0",
    "docker>=6.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
]
requires-python = "=3.12"

[project.scripts]
biting-lip-mcp-tools = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
